--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<h1>Hello</h1>
+<h1>Login</h1>
+<input id="turd">
+<a href="https://www.google.com/search?q=Rick%20Astley">Enter</a>
+<script>
+  var password = getElementById("turd")
+  var text = password.value 
+  function CheckPassword() {
+if(text == "yomumisfat") {
+  
+  
+ return true;
+}
+    alert("Incorrect password"):\
+    return false;
+  
+  </script>
