--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
   var text = password.value 
   function CheckPassword() {
 if(text == "yomumisfat") {
-  
-  
- return true;
+ 
+ return true; 
 }
-    alert("Incorrect password"):\
+    alert("Incorrect password"):
     return false;
   
   </script>
