--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Login</h1>
 <input id="turd">
-<a href="https://www.google.com/search?q=Rick%20Astley">Enter</a>
+<a href="https://www.google.com/search?q=Rick%20Astley" onclick="return CheckPassword();">Enter</a>
 <script>
   var password = getElementById("turd")
   var text = password.value 
