--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <h1>Login</h1>
-<input id="turd">
-<a href="https://www.google.com/search?q=Rick%20Astley" onclick="return CheckPassword();">Enter</a>
+<input id="seth">
+<a href="https://www.google.com/search?q=Rick%20Astley" onclick="return Loserseth();">Enter</a>
 <script>
-  function CheckPassword() {
-  var password = getElementById("turd")
-  var text = password.value 
-  
-if(text == "yomumisfat") {
- 
- return true; 
-}
-    alert("Incorrect password"):
+function Loserseth() {
+    var Password = document.getElementById("seth")
+    var text = Password.value 
+    if(text == "SETHISFAT") {
+        return true;
+    }
+    alert("Incorrect password")
     return false;
-  }
+}
   </script>
