--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <h1>Login</h1>
-<input id="seth">
+<input id="seth" type="password">
 <a href="https://www.google.com/search?q=Rick%20Astley" onclick="return Loserseth();">Enter</a>
 <script>
 function Loserseth() {
     var Password = document.getElementById("seth")
     var text = Password.value 
-    if(text == "SETHISFAT") {
+    if(text == "SETHDINGUS29") {
         return true;
     }
     alert("Incorrect password")
