--- a/index.html
+++ b/index.html
@@ -11,4 +11,7 @@ function Loserseth() {
     alert("Incorrect password")
     return false;
 }
+    Btw only members of my channel can use this website:)
   </script>
+
+    Btw only members of my channel can use this website:)
